--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </tr>
     </table>
     <hr>
-   <a href="hobbies.html">Troop stain</a>
+   <a href="hobbies.html">Troop stuff</a>
    <br>
    <h2><a href="Contact.html">Contact Me</a></h2>
     
